fix: adjust z-index in weekly

--- a/src/css/week/time.styl
+++ b/src/css/week/time.styl
@@ -83,13 +83,11 @@
         background-color: #135de6
         margin: -4px 0 0 -5px
         border-radius: 50%
-        z-index: 99
 
     .sticky-container
         position: absolute
         top: 0
         text-align: right
-        z-index: 99
         display: table
     
     .timezone-label
